<resources>
    <string name="app_name">Top Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">details</string>

    //details activity
    <string name="movie_description">Description :</string>
    <string name="movie_date">Release Date :</string>
    <string name="movie_rate">Rate :</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reviews">Reviews :</string>
    <string name="trailers">Trailers :</string>


    //settings
    <string name="Movies_order_key">movieOrder</string>
    <string name="Movies_order_default">0</string>
    <string name="Movies_order_title">Order By</string>
    <string name="Movies_order_summary">order of movies</string>

    <string-array name="Movies_order_values">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="Movies_order_keys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
