<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="minasameh.topmovies.DetailsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size"
        android:orientation="horizontal"
        android:gravity="center"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_size"
            android:id="@+id/movie_poster"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/date_rate"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/starStyle"
                    />
                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label_size"
                    android:text="sdafg"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="dfadf"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:id="@+id/movie_date"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_rate"
                android:layout_gravity="center"
                android:stepSize="0.25" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_size"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/label_size"
                android:text="@string/movie_description"
                android:id="@+id/movie_description_label"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_below="@id/movie_description_label"
                android:id="@+id/movie_description"
                />

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textSize="@dimen/label_size"
                android:layout_marginTop="15dp"
                android:layout_below="@id/movie_description"
                android:visibility="invisible"
                />

            <LinearLayout
                android:id="@+id/trailers_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_title"
                android:divider="?android:dividerHorizontal"
                android:showDividers="middle"
                android:orientation="vertical"
                >
            </LinearLayout>

            <TextView
                android:id="@+id/reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/label_size"
                android:visibility="invisible"
                android:layout_below="@id/trailers_listview"
                />

            <LinearLayout
                android:id="@+id/reviews_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews_title"
                android:divider="?android:dividerHorizontal"
                android:showDividers="middle"
                android:orientation="vertical"
                >
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
